fix visibility issue for flex-layout beta 14

--- a/src/modules/leaflet-zoom/leaflet-zoom-display-container/leaflet-zoom-display-container.component.css
+++ b/src/modules/leaflet-zoom/leaflet-zoom-display-container/leaflet-zoom-display-container.component.css
@@ -1,4 +1,4 @@
 .zoom-display-container {
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
